--- a/docs/main/20221107.md
+++ b/docs/main/20221107.md
@@ -1,22 +1,22 @@
 # 作业
 ## 语文
-1. 《高分》P155（解词）
+1. 《高分》P155（解词）1
 
 ## 数学
 1. 《分层》P37
 
 ## 英语
 1. 默写《英语书》P142左边第一列（read-speak）动词表以及补充的8个动词。
-    > | Base form | Simple past | Past participle |
-    > | :-------: | :---------: | :-------------: |
-    > |   cost    |    cost     |      cost       |
-    > |    set    |     set     |       set       |
-    > |   hurt    |    hurt     |      hurt       |
-    > |   show    |   showed    |      shown      |
-    > |   feed    |     fed     |       fed       |
-    > |    pay    |    paid     |      paid       |
-    > |   beat    |    beat     |     beaten      |
-    > |    hit    |     hit     |       hit       |
+    | Base form | Simple past | Past participle |
+    | :-------: | :---------: | :-------------: |
+    |   cost    |    cost     |      cost       |
+    |    set    |     set     |       set       |
+    |   hurt    |    hurt     |      hurt       |
+    |   show    |   showed    |      shown      |
+    |   feed    |     fed     |       fed       |
+    |    pay    |    paid     |      paid       |
+    |   beat    |    beat     |     beaten      |
+    |    hit    |     hit     |       hit       |
 2. 《分层》P36~38（阅读划依据）
 
 ## 道法
