--- a/docs/main/20221108.md
+++ b/docs/main/20221108.md
@@ -1,3 +1,12 @@
 # 作业
+## 语文
+1. 随笔：《语文书》P142/五（≥200字）
+   > 1. 人物描写
+   > 2. 动作描写
+   > 3. 神态描写
+   > 4. 语言描写
+   > 5. 心理描写
+   > 6. 正、侧面描写
+
 ## 数学
 1. 《分层》P38
