--- a/docs/main/20221116.md
+++ b/docs/main/20221116.md
@@ -4,13 +4,17 @@
 
 ## 英语
 1. 正文 P105~P107（P104 最后两题也要做）
-> 阅读划依据，拍照上传
-> P105 拍一页；P106 拍一页；P107 拍一页
+    > 阅读划依据，拍照上传
+    > P105 拍一页；P106 拍一页；P107 拍一页
 2. 输入时文
 
 ## 物理
 1. 《学以致用》P52~53
 
 ## 历史
-1. P104~105，P108~109，P110~112
-   >22道选择题，输入平板 
+1. 《学评》P104\~105，P108\~109，P110~112
+   > 22道选择题，输入平板
+
+## 道法
+1. 《学评》L8（选择题）
+2. 预习L9.2
